# earthquake-hazzard

./: .editorconfig  .env.example  .gitignore  .sqlfluff  .terraform.lock.hcl  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  main.tf  outputs.tf  pyproject.toml  variables.tf
.github/workflows/: tests.yaml
bigquery/: countries_schema.json  earthquakes_schema.json
cloud-startup/: docker-compose.bu  docker-compose.ign
dags/: get_country_info.py  get_earthquake_data.py
dags/sql/: insert_earthquake.sql
docs/: cloud-setup.md
src/config/: airflow.cfg
src/dags/: generate_summary_tables.py  get_country_info.py  get_earthquake_data.py
src/dags/dbt/earthquake_analysis/: dbt_project.yml
src/dags/dbt/earthquake_analysis/models/core/: country_earthquakes.sql  magnitude_summary.sql  schema.yaml
src/dags/include/: .gitignore  country_to_continent.json
src/dags/sql/: insert_earthquake.sql
tests/: test_get_country.py  test_get_earthquake.py
